--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
         .highlight-approved {
             position: relative;
             cursor: pointer;
+            border: solid 2px blue;
         }
 
         .highlight-change {
-            text-decoration: underline;
-            text-decoration-color: black;
+            border: solid 2px black;
             position: relative;
             cursor: pointer;
         }
